ci(publish): add dependency installation step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,9 @@ jobs:
           cache: true
           experimental: true
 
+      - name: Install dependencies
+        run: bun install
+
       - name: Build
         run: mise run build
 
